# services/auth/internal/handler/routes.go
@@ -24,5 +24,6 @@ func RegisterRoutes(router *gin.Engine, authHandler AuthHandler) {
 		v1.POST("/resend-otp", authHandler.ResendOTP)
 		v1.GET("/google/login", authHandler.GoogleLogin)
 		v1.GET("/google/callback", authHandler.GoogleCallback)
+		v1.GET("/public-key", authHandler.GetPublicKey)
 	}
 }
